Fix heading overlapping navbar on overflow

--- a/Landing Folder/styling.css
+++ b/Landing Folder/styling.css
@@ -17,7 +17,7 @@
 .home {
     position: relative;
     width: 100%;
-    height: 90vh;
+    /* height: 90vh; */
     background: url(./blue-background-7470781_1280.jpg);
     background-size: cover;
     background-position: center;
@@ -106,10 +106,10 @@
 }
 
 .card-deck{
-    padding-left: 90px;
-    padding-right: 90px;
-    padding-top: 60px;
-    padding-bottom: 50px;
+    /* padding-left: 90px; */
+    /* padding-right: 90px; */
+    /* padding-top: 60px; */
+    /* padding-bottom: 50px; */
 }
 
 .card-text{
